# travel_hi

./: .gitignore  README.MD  docker-compose.yaml  requirements.txt
api/: .gitignore  Dockerfile  README.md  alembic.ini  app.db  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml
api/.envs/: .env-default
api/alembic/: env.py
api/alembic/versions/: 278812250ec5_init_schema.py  47662cf6e901_add_name_description_likes_.py  7ad36dba8af1_remove_description_from_report.py  98dba189ca10_user_auth.py  aaef1d16c351_change_report_type_enum.py  b486f7701f03_add_points_to_user.py  b6b6d8987006_report.py  e684ceeb11a3_change_report_type_enum.py  f71641204a1c_init_report.py
api/app/: main.py
api/app/core/: auth.py  config.py  permissions.py  rbac.py  security.py
api/app/db/: base.py  database.py  session.py
api/app/db/models/: __init__.py  event.py  report.py  user.py
api/app/repositories/: auth.py  event.py  report.py  user.py
api/app/routers/v1/: api.py
api/app/routers/v1/endpoints/: auth.py  disruptions.py  event.py  example.py  report.py  user.py  ws.py
api/app/schemas/: common.py  event.py  report.py  token.py  traffic.py  user.py
api/app/services/: report.py  ws_manager.py
api/app/utils/: images.py  llm.py  moderation.py  pagination.py
app/: .env  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/.certs/: localhost-key.pem  localhost.pem
app/src/: App.tsx  ThemeContext.tsx  main.tsx  router.ts  theme.ts
app/src/common/: Menu.tsx  (+1 more)
nginx/: nginx.conf
(+34 files in other folders)
